#1057 Resolve codestyle issues and usage of deprecated components after rebase